# trc_read_note

./: netlink.md  python_test.py
Psychlab(deeplab认知实验室)/: note.md
prototxt/: deeplab_train.prototxt
python学习笔记/: learn1.md
self_experient/selfmoder/: deploy.prototxt  nohup.out  solver.prototxt  test.sh  test_net.py  trcdeploy.prototxt  trctrain (copy).prototxt  trctrain.prototxt  trctrainbak0224.prototxt  trctrainbak0304.prototxt
self_experient/谭日成_20180206174410930/: test_5anchor_24channel_bollard.py  train.prototxt
self_experient/谭日成_20180206174410930/2/: list.txt  list.txt_all
tool/: clion使用技巧.md  docker_use.md  flow.md  qianmo训练hpp.md  ros_使用.md
tool/pycharm/: 配置.md
work/: error_list.txt  freespace_eval.md  freespace_train.md  freespace调研.md  junheng_add.txt  tensorRT.md  test_park.html  test_park.md  test_script说明.md  trackone question.md  train_parking.md  各统计指标分类和理解.md
work/freespace/: build_develop_vp_new_fisheye.md  pytorch_eval.md
笔记/: 1.conf  CMakeLists.txt  Makefile  bash编写.md  c3d相关训练汇总  caffe.md  compile_caffe.md  custom_agorithem_thinking.md  direct_flow_评测.md  docker_use.md  generaData.md  git_use.md  graph_net.md  learn_tensorflow.md  modi git repo info  rnn&&lstm笔记.md  ros_use.md  shell&file&regix.md  slam.md  test_read.cpp  trc_use_info.md  work_experence.md  一些问题总结  专利.md  工作笔记  强化学习.md  思想层面关于智能网络的几点思考.md  搜索技巧.md  自动驾驶笔记  自动驾驶笔记.md  训练C3D笔记.md  论文阅读  评测问题梳理.md  迁移学习.md
论文/visualization/: Neural Networks, Manifolds, and Topology -- colah's blog.html
(+2 files in other folders)
